# tele-bot-casino

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app_config.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  telegram_schema.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml
coverage/: package-lock.json  package.json  rollup.config.js
coverage/src/: main.js
coverage/src/modules/: filter.js  shortcuts.js  sort.js
coverage/src/styles/: main.scss
coverage/src/styles/base/: _variables.scss
coverage/src/styles/components/: _table.scss
coverage/src/styles/layout/: _container.scss
coverage/src/styles/utils/: _accessibility.scss
coverage/src/utils/: constants.js  helpers.js
src/: bot.py  init_db.py  user_service.py
src/games/: __init__.py  game_base.py  game_manager.py  slots.py
src/games/slots/: __init__.py  ancient_treasures.py  cosmic_fortune.py  dragons_hoard.py  mystic_forest.py  pirates_bounty.py  utils.py
src/handlers/: base_handler.py  game_handler.py  help_handler.py  payment_handler.py  start_handler.py  wallet_handler.py
src/payments/: provider.py  service.py
src/wallet/: __init__.py  crypto_types.py  transaction.py  wallet_service.py
tests/: conftest.py  test_game_handler.py  test_handlers.py  test_user_service.py  test_wallet_service.py
